--- a/src/index.css
+++ b/src/index.css
@@ -57,3 +57,15 @@ div.content {
     float: none;
   }
 }
+
+.button {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin-left: 40px;
+}
