--- a/src/components/Note/Note.css
+++ b/src/components/Note/Note.css
@@ -5,5 +5,21 @@
 }
 
 .note input, textarea {
-    width: 100%;
+    width: 80%;
+}
+
+.note .deleteButton {
+    float: right;
+    background: transparent;
+    border: 1px solid #f00;
+    border-radius: 2em;
+    color: #f00;
+    display: inline-block;
+    font-size: 12px;
+    height: 20px;
+    line-height: 2px;
+    margin-right: 10px;
+    padding: 0;
+    text-align: center;
+    width: 20px;
 }
