--- a/src/App.css
+++ b/src/App.css
@@ -6,10 +6,17 @@
   height: 40vmin;
 }
 
-.App-link {
-  color: #09d3ac;
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
-button:hover {
-  cursor: pointer;
+.App-link {
+  color: #09d3ac;
 }
